--- a/app/src/main/res/layout/stockroom_tile_item.xml
+++ b/app/src/main/res/layout/stockroom_tile_item.xml
@@ -52,7 +52,7 @@
 
   <TextView
       android:id="@+id/stockRoomTileItemMarketChange"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginStart="4dp"
       android:layout_marginEnd="2dp"
