--- a/app/src/main/res/layout/db_headline_type_item.xml
+++ b/app/src/main/res/layout/db_headline_type_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/db_type_headline_layout"
+    android:id="@+id/db_headline_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,7 +9,7 @@
     >
 
   <TextView
-      android:id="@+id/db_type_headline"
+      android:id="@+id/db_headline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textStyle="bold"
