--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,33 @@ limitations under the License. -->
     <item name="android:background">#FF000000</item>
   </style>
 
+  <style name="table_item_style">
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginTop">2dp</item>
+    <item name="android:layout_marginStart">4dp</item>
+    <item name="android:layout_marginEnd">2dp</item>
+    <item name="android:layout_marginBottom">2dp</item>
+    <!--
+        <item name="android:background">@drawable/border</item>
+    -->
+  </style>
+
+  <style name="table_layout_style">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginTop">1dp</item>
+    <item name="android:layout_marginStart">1dp</item>
+    <item name="android:layout_marginEnd">1dp</item>
+    <item name="android:layout_marginBottom">2dp</item>
+  </style>
+
+  <style name="table_item_vertical_line">
+    <item name="android:layout_width">1dp</item>
+    <item name="android:layout_height">0dp</item>
+    <item name="android:background">#FF000000</item>
+  </style>
+
   <style name="stock_item">
     <item name="android:padding">4dp</item>
   </style>
