--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,7 +78,7 @@ limitations under the License. -->
   <style name="table_item_vertical_line">
     <item name="android:layout_width">1dp</item>
     <item name="android:layout_height">0dp</item>
-    <item name="android:background">#FF000000</item>
+    <item name="android:background">@color/cardview_dark_background</item>
   </style>
 
   <style name="stock_item">
