--- a/app/src/main/res/layout/stockroom_table_item.xml
+++ b/app/src/main/res/layout/stockroom_table_item.xml
@@ -23,7 +23,6 @@
   <TextView
       android:id="@+id/tableDataSymbol"
       style="@style/table_item_style"
-      android:gravity="center_horizontal"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintEnd_toStartOf="@id/guideline2"
@@ -40,7 +39,6 @@
   <TextView
       android:id="@+id/tableDataName"
       style="@style/table_item_style"
-      android:gravity="center_horizontal"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline2"
       app:layout_constraintEnd_toStartOf="@id/guideline3"
@@ -169,7 +167,6 @@
   <TextView
       android:id="@+id/tableDataAlertAbove"
       style="@style/table_item_style"
-      android:gravity="center_horizontal"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline10"
       app:layout_constraintEnd_toStartOf="@id/guideline11"
@@ -186,7 +183,6 @@
   <TextView
       android:id="@+id/tableDataAlertBelow"
       style="@style/table_item_style"
-      android:gravity="center_horizontal"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline11"
       app:layout_constraintEnd_toStartOf="@id/guideline12"
@@ -201,9 +197,8 @@
       />
 
   <TextView
-      android:id="@+id/tableDataEvents"
+      android:id="@+id/tableDataAssets"
       style="@style/table_item_style"
-      android:gravity="center_horizontal"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline12"
       app:layout_constraintEnd_toStartOf="@id/guideline13"
@@ -218,12 +213,27 @@
       />
 
   <TextView
-      android:id="@+id/tableDataNote"
+      android:id="@+id/tableDataEvents"
       style="@style/table_item_style"
-      android:gravity="center_horizontal"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline13"
       app:layout_constraintEnd_toStartOf="@id/guideline14"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <View
+      style="@style/table_item_vertical_line"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline14"
+      app:layout_constraintBottom_toBottomOf="parent"
+      />
+
+  <TextView
+      android:id="@+id/tableDataNote"
+      style="@style/table_item_style"
+      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintStart_toEndOf="@+id/guideline14"
+      app:layout_constraintEnd_toStartOf="@id/guideline15"
       app:layout_constraintBottom_toBottomOf="parent"
       />
 
@@ -256,7 +266,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="350dp"
+      app:layout_constraintGuide_begin="360dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -264,7 +274,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="530dp"
+      app:layout_constraintGuide_begin="520dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -272,7 +282,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="670dp"
+      app:layout_constraintGuide_begin="650dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -280,7 +290,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="770dp"
+      app:layout_constraintGuide_begin="760dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -288,7 +298,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="870dp"
+      app:layout_constraintGuide_begin="860dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -296,7 +306,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1050dp"
+      app:layout_constraintGuide_begin="1010dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -304,7 +314,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1170dp"
+      app:layout_constraintGuide_begin="1140dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -312,7 +322,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1270dp"
+      app:layout_constraintGuide_begin="1240dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -320,7 +330,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1370dp"
+      app:layout_constraintGuide_begin="1340dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -328,7 +338,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1620dp"
+      app:layout_constraintGuide_begin="1590dp"
       />
 
   <androidx.constraintlayout.widget.Guideline
@@ -336,7 +346,15 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
-      app:layout_constraintGuide_begin="1870dp"
+      app:layout_constraintGuide_begin="1840dp"
+      />
+
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline15"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      app:layout_constraintGuide_begin="2090dp"
       />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
