update asset list

--- a/app/src/main/res/layout/assetview_item.xml
+++ b/app/src/main/res/layout/assetview_item.xml
@@ -101,7 +101,7 @@ limitations under the License. -->
         app:layout_constraintTop_toTopOf="parent"
         />
     <TextView
-        android:id="@+id/textViewAssetMarketChange"
+        android:id="@+id/textViewAssetChange"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -111,7 +111,7 @@ limitations under the License. -->
         app:layout_constraintTop_toTopOf="parent"
         />
     <TextView
-        android:id="@+id/textViewAssetMarketValue"
+        android:id="@+id/textViewAssetValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
