--- a/app/src/main/res/layout/assetview_item.xml
+++ b/app/src/main/res/layout/assetview_item.xml
@@ -78,6 +78,7 @@ limitations under the License. -->
         android:layout_marginTop="4dp"
         android:gravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline1"
         app:layout_constraintTop_toTopOf="parent"
         />
